# anansi

./: .env  .gitignore  Dockerfile  README.md  TEMPLATE.env  docker-compose.yml  entrypoint.sh  play_with.ipynb  play_with_anansi.ipynb  pyproject.toml  run  template.env
app/: Dockerfile  entrypoint.sh  pyproject.toml
app/anansi_/: __init__.py  settings.py  start.py
app/anansi_/brokers/: brokers.py  settings.py
app/anansi_/config/: defaults.py  messages.py
app/anansi_/marketdata/: brokers.py  indicators.py  klines.py  settings.py
app/anansi_/marketdata/operators/: classifiers.py
app/anansi_/notifiers/: notifiers.py  settings.py
app/anansi_/share/: settings.py
app/anansi_/share/tools/: formatting.py  time_handlers.py
app/anansi_/sql_app/: schemas.py
app/anansi_/storage/: storage.py
app/anansi_/tools/: doc.py  formatting.py  hashes.py  profiliers.py  serializers.py  time_handlers.py
app/anansi_/trading/: DEPRECARED_brokers.py  analyzers.py  brokers.py  classifiers.py  defaults.py  main.py  models.py  order_handler.py  stoploss.py  traders.py  views.py
app/src/: exceptions.py  main.py
app/src/API/views/: trading.py
app/src/config/: database_adapters.py  defaults.py  manager.py  messages.py  preferences.py  settings.py  setups.py
app/src/domain/brokers/: __init__.py  engines.py
app/src/lib/: __init__.py
app/src/log/: __init__.py  broadcasters.py
app/src/services/: backtesting.py  operations.py  tradingbot.py
app/src/tools/: formatting.py  time_handlers.py
app/src/utils/: exceptions.py  schemas.py
app/src/views/: defaults.py  trading.py
app/tests/: test_anansi_.py
backend/: Dockerfile  deprecated-entrypoint.sh  pyproject.toml
backend/app/: main.py
backend/app/config/: __init__.py
backend/src/: __init__.py  main.py
backend/src/API/: deps.py  main.py  router.py
backend/src/config/: databases.py  messages.py  preferences.py
backend/src/core/: security.py
backend/src/dash/: main.py
backend/src/log/: __init__.py  broadcasters.py
backend/src/services/: start.py
backend/src/utils/: exceptions.py
backend/tests/: test_version.py
(+200 files in other folders)
