[tool.poetry]
name = "anansi_"
version = "0.1.0"
description = ""
authors = ["Marcus Mello <marcus@vintem.tech>"]
license = "GPL-3.0-or-later"
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.2"
uvicorn = "^0.12.2"
pendulum = "^2.1.2"
pandas = "^1.1.4"
python-telegram-bot = "^13.0"
tabulate = "^0.8.7"
requests = "^2.25.0"
psycopg2 = "^2.8.6"
environs = "^9.2.0"
influxdb = "^5.3.1"
hashids = "^1.3.1"
python-binance = "^0.7.5"
print-dict = "^0.1.16"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
ipykernel = "^5.3.4"
jupyter = "^1.0.0"
pylint = "^2.6.0"
rope = "^0.18.0"
pytest-mock = "^3.3.1"
requests-mock = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.dephell.main]
from = {format = "pyproject", path = "pyproject.toml"}
to = {format = "requirements", path = "requirements.txt"}


[tool.poetry.scripts]
anansi = 'anansi_.start:run'
