[tool.poetry]
name = "anansi-backend"
version = "0.1.0"
description = ""
authors = ["marcusmello <mandealista@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.7"
fastapi = "^0.68.1"
pandas = "^1.3.2"
uvicorn = "^0.15.0"
pendulum = "^2.1.2"
python-telegram-bot = "^13.7"
requests = "^2.26.0"
SQLAlchemy = "^1.4.23"
environs = "^9.3.3"
python-binance = "^1.0.12"
print-dict = "^0.1.19"
tabulate = "^0.8.9"
influxdb-client = {extras = ["ciso", "extra"], version = "^1.20.0"}
influxdb = "^5.3.1"
email-validator = "^1.1.3"
aiofiles = "^0.7.0"
Jinja2 = "^3.0.1"
psycopg2 = "^2.9.1"
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.8b0"
ipykernel = "^6.3.0"
jupyter = "^1.0.0"
pylint = "^2.10.2"
rope = "^0.19.0"
pytest-mock = "^3.6.1"
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
